--- a/src/Nod.csproj
+++ b/src/Nod.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="JavaScriptEngineSwitcher.V8" Version="3.0.5" />
     <PackageReference Include="JavaScriptEngineSwitcher.V8.Native.win-x64" Version="3.0.5" />
+    <PackageReference Include="Mannex" Version="2.17.0" />
     <PackageReference Include="morelinq" Version="3.1.0" />
     <PackageReference Include="NDesk.Options" Version="0.2.1" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
